# bawbel-mcp

./: README.md  glama.json  publish.yml  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml
bawbel_mcp/: __init__.py  server.py
